[package]
name = "wasmer-workspace"
description = "Wasmer workspace"
publish = false
autoexamples = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer = { version = "=6.1.0", path = "lib/api", default-features = false }
wasmer-compiler = { version = "=6.1.0", path = "lib/compiler", features = [
	"compiler",
], optional = true }
wasmer-compiler-cranelift = { version = "=6.1.0", path = "lib/compiler-cranelift", optional = true }
wasmer-compiler-singlepass = { version = "=6.1.0", path = "lib/compiler-singlepass", optional = true }
wasmer-compiler-llvm = { version = "=6.1.0", path = "lib/compiler-llvm", optional = true }
wasmer-wasix = { path = "lib/wasix", optional = true }
wasmer-wast = { version = "=6.1.0", path = "tests/lib/wast", optional = true }
wasmer-cache = { version = "=6.1.0", path = "lib/cache", optional = true }
wasmer-types = { version = "=6.1.0", path = "lib/types" }
wasmer-middlewares = { version = "=6.1.0", path = "lib/middlewares", optional = true }


# Third party dependencies

cfg-if.workspace = true
tokio = { workspace = true, features = [
	"rt",
	"rt-multi-thread",
	"macros",
], optional = true }
crossbeam-queue.workspace = true

[workspace]
members = [
	"fuzz",
	"lib/api",
	"lib/api/macro-wasmer-universal-test",
	"lib/backend-api",
	"lib/c-api",
	"lib/c-api/examples/wasmer-capi-examples-runner",
	"lib/c-api/tests/wasmer-c-api-test-runner",
	"lib/cache",
	"lib/cli",
	"lib/compiler-cranelift",
	"lib/compiler-llvm",
	"lib/compiler-singlepass",
	"lib/compiler",
	"lib/config",
	"lib/derive",
	"lib/sys-utils",
	"lib/types",
	"lib/sdk",
	"lib/virtual-io",
	"lib/virtual-fs",
	"lib/virtual-net",
	"lib/vm",
	"lib/wai-bindgen-wasmer",
	"lib/wasi-types",
	"lib/wasix",
	"lib/journal",
	"lib/swift",
	"lib/package",
	"tests/integration/cli",
	"tests/integration/ios",
	"tests/lib/compiler-test-derive",
	"tests/lib/wast",
	"tests/wasi-wast",
	"tests/wasmer-argus",
]
exclude = ["./lib/cli/tests/packages/axum"]
resolver = "2"

[workspace.package]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2024"
homepage = "https://wasmer.io/"
license = "MIT"
repository = "https://github.com/wasmerio/wasmer"
rust-version = "1.89"
version = "6.1.0"

[workspace.dependencies]
# Repo-local crates
wasmer-package = { version = "0.601.0", path = "lib/package" }
wasmer-config = { path = "./lib/config" }
wasmer-wasix = { path = "./lib/wasix" }
wasmer-sdk = { path = "./lib/sdk" }

# Wasmer-owned crates
webc = "=10.0.1"
shared-buffer = "0.1.4"
loupe = "0.2.0"

# Third-party crates
bytes = "1"
serde_bytes = { version = "0.11" }
hex = "0.4"
anyhow = "1.0"
sha2 = "0.10"
async-trait = "0.1.68"
getrandom = "0.2"
ciborium = "0.2.2"
bytesize = "2.3.1"
semver = "1.0"
tempfile = "3.6.0"
cfg-if = "1.0"
tar = "0.4.40"
flate2 = "1.0.34"
log = "0.4.22"
blake3 = "1.0"
rayon = "1.7.0"
itertools = "0.14"
byteorder = "1.3"
more-asserts = "0.3.1"
enum-iterator = "2.3.0"
backtrace = "0.3"
hashbrown = "0.16.1"
smallvec = "1.6"
region = "3.0"
once_cell = "1.17.1"
num_enum = "0.7.3"
dashmap = "6.1.0"
http = "1.4.0"
hyper = "1.8.1"
hyper-util = "0.1.5"
http-body-util = "0.1.1"
reqwest = { version = "0.12.0", default-features = false }
enumset = "1.1.0"
memoffset = "0.9.1"
wasmparser = { version = "0.224.0", default-features = false, features = [
	"validate",
	"features",
	"simd",
] }
rkyv = { version = "0.8.8", features = ["indexmap-2", "bytes-1"] }
memmap2 = { version = "0.9.9" }
toml = { version = "0.9.8", features = ["preserve_order"] }
indexmap = "2"
serde = { version = "1", default-features = false }
serde_yaml = { version = "0.9.34" }
serde_json = { version = "1" }
bytecheck = { version = "0.8.2" }
libc = { version = "^0.2", default-features = false }
gimli = { version = "0.32.3" }
futures-util = { version = "0.3.31" }
mio = "1"
# MIO 1.0 starts at tokio version 1.39, hence the minimum requirement.
tokio = { version = "1.39.0", default-features = false }
tokio-tungstenite = { version = "0.24.0" }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-test = { version = "0.2" }
socket2 = { version = "0.6.1", features = ["all"] }
pretty_assertions = "1.4.0"
base64 = "0.22.1"
time = { version = "0.3.44", default-features = false }
url = "2.5"
thiserror = "2.0.17"
target-lexicon = { version = "0.13.3", default-features = false }
object = "0.38.0"
derive_more = { version = "2.0.1", features = ["debug", "display"] }
wasm-encoder = { version = "0.242.0", default-features = false, features = [
	"std",
] }
ignore = "0.4"
parking_lot = "0.12.1"
clap = { version = "4.5.53", default-features = false }
clap_builder = { version = "4.5.53" }
clap_derive = { version = "4.5.49" }
clap_lex = { version = "0.7.6" }
fs_extra = {version = "1.3.0"}
# TODO: use a proper release
inkwell = { git = "https://github.com/TheDan64/inkwell.git", rev = "b9c53276e30935ccec841d12c9687a17e9199958", default-features = false }
phf = "0.13.1"
dynasm = "4.0.0"
dynasmrt = "4.0.0"
cc = "1.2.47"
regex = "1.11"
rustc_version = "0.4"
cranelift-entity = { version = "=0.126.1", default-features = false }
cranelift-codegen = { version = "=0.126.1", default-features = false }
cranelift-frontend = { version = "=0.126.1", default-features = false }
xxhash-rust = { version = "0.8.10", default-features = false }
macho-unwind-info = "0.5.0"
windows-sys = { version = "0.61.2", default-features = false }
leb128 = "0.2"
self_cell = "1.0"
build-deps = "0.1.4"
glob = "0.3"
criterion = { version = "0.7", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
ureq = "3.1.4"
gumdrop = "0.8"
wast = "242.0.0"
axum = { version = "=0.6.9", default-features = false }
trybuild = "1.0.11"
cynic = { version = "3.7.2", default-features = false }
futures = "0.3.30"
indicatif = "0.18.3"
libfuzzer-sys = "0.4.0"
wasm-smith = "0.4.4"
wasmprinter = "0.242.0"
wasm-bindgen-test = "0.3.0"
wat = "1.242.0"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
rusty_jsc = "0.1.0"
paste = "1.0.15"
rustc-demangle = "0.1"
cmake = "0.1.50"
which = "8.0.0"
xz = "0.1.0"
zip = { version = "6.0.0", default-features = false }
bindgen = { version = "0.72.1", default-features = false }
harsh = "0.2.2"
merge-streams = "0.1.2"
pin-project-lite = "0.2.10"
serde_path_to_error = "0.1.14"
async-tungstenite = "0.28.0"
graphql-ws-client = "0.11.0"
uuid = { version = "1", default-features = false }
typetag = "0.2.21"
field-offset = "0.3.3"
cbindgen = { version = "0.29", default-features = false }
inline-c = "0.1.7"
wasmer-inline-c = "0.1.1"
walkdir = "2.3.2"
rand = "0.9.2"
colored = "3.0.0"
dirs = "6.0.0"
path-clean = "1.0.1"
cargo_metadata = "0.23.1"
dialoguer = "0.12.0"
pathdiff = "0.2.1"
normpath = "1.5.0"
opener = "0.8.3"
wasm-coredump-builder = "0.1.11"
comfy-table = "7.2.1"
git-version = "0.3.9"
humantime = "2.1.0"
interfaces = "0.0.9"
mac_address = "1.1.5"
clap_complete = "4.5.61"
clap_mangen = "0.2.31"
console = "0.16.1"
console-subscriber = "0.5.0"
dotenvy = "0.15.7"
lzma-rs = "0.3.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"
derive_builder = "0.20.2"
saffron = "0.1.0"
schemars = "1.1.0"
compiletest_rs = "0.11.2"
bincode = "1.3"
lz4_flex = "0.12.0"
hexdump = "0.1.2"
uniffi = "0.30.0"
dunce = "1.0.4"
filetime = "0.2.18"
replace_with = "0.1.7"
slab = "0.4"
web-time = "1.1"
parking = "2.2"
hyper-tungstenite = "0.13"
ipnet = "2.10.1"
iprange = "0.6.7"
smoltcp = { version = "0.12.0", default-features = false }
tokio-serde = "0.9"
tokio-util = "0.7.8"
corosensei = "0.3.0"
crossbeam-queue = "0.3.8"
fnv = "1.0.3"
scopeguard = "1.1.0"
rustversion = "1.0"
libunwind = "1.3.3"
mach2 = "0.6.0"
bitflags = "2.10.0"
wai-bindgen-wasmer-impl = "0.2.2"
wai-bindgen-rust = { version = "0.2.1", default-features = false }
wai-bindgen-gen-core = { version = "0.2.1", default-features = false }
wai-bindgen-gen-rust-wasm = { version = "0.2.1", default-features = false }
wai-bindgen-gen-rust = { version = "0.2.1", default-features = false }
wai-parser = "0.2.1"
bus = "2.4.1"
chrono = { version = "^0.4.38", default-features = false }
cooked-waker = "^5"
crossbeam-channel = "0.5.15"
heapless = "0.9.2"
linked_hash_set = "0.1.6"
petgraph = "0.8.3"
pin-project = "1.0.12"
pin-utils = "0.1.0"
rusty_pool = "0.7.0"
serde_derive = "^1"
tokio-stream = "0.1"
tower = "0.5.2"
tower-http = "0.6.7"
urlencoding = "^2"
waker-fn = "1.1"
wasm-bindgen-futures = "0.4.37"
wcgi = "0.3.0"
wcgi-host = "0.3.0"
web-sys = "0.3.64"
weezl = "^0.1"
assert-panic = "1.0.1"
env_logger = { version = "0.11.5", default-features = false }
termios = "0.3"
terminal_size = "0.4.3"
tracing-wasm = "0.2"
insta = "1.44.2"
md5 = "0.8.0"
syn = { version = "2", default-features = false }
proc-macro2 = "1"
proc-macro-error2 = "2.0.1"
quote = "1.0.20"
test-log = { version = "0.2", default-features = false }
wasmi_c_api_impl = "0.40.0"
unix_mode = "0.1.3"

[build-dependencies]
test-generator = { path = "tests/lib/test-generator" }
build-deps.workspace = true
anyhow.workspace = true
glob.workspace = true
rustc_version.workspace = true

[dev-dependencies]
wasmer = { version = "=6.1.0", path = "lib/api", features = [
	"compiler",
	"singlepass",
	"sys",
] }
anyhow.workspace = true
clap.workspace = true
clap_builder.workspace = true
clap_derive.workspace = true
clap_lex.workspace = true
criterion = { workspace = true, features = ["csv_output"] }
serial_test = { workspace = true, default-features = false }
compiler-test-derive = { path = "tests/lib/compiler-test-derive" }
tempfile.workspace = true
ureq.workspace = true
# For logging tests using the `RUST_LOG=debug` when testing
test-log = { workspace = true, default-features = false, features = ["trace"] }
tracing = { workspace = true, default-features = false, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = [
	"env-filter",
	"fmt",
] }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
itertools.workspace = true

[features]
# Don't add the compiler features in default, please add them on the Makefile
# since we might want to autoconfigure them depending on the availability on the host.
default = ["wat", "wast", "cache", "wasi", "middlewares"]
# backend means that the `wasmer` crate will be compiled with the `wasmer-compiler` or the `jsc`.
# That means: that is able to execute modules
backend = []
jsc = ["wasmer/jsc", "backend", "wat", "wasmer/std"]

# Enable the WAMR backend (using it as default only if it is the only backend enabled)
wamr = ["wasmer/wamr"]

# Enable the V8 backend (using it as default only if it is the only backend enabled)
v8 = ["wasmer/v8"]

# Enable the wasmi backend (using it as default only if it is the only backend enabled)
wasmi = ["wasmer/wasmi"]

engine = ["universal"]
universal = []
cache = ["wasmer-cache"]
wast = ["wasmer-wast"]
wasi = ["wasmer-wasix", "tokio"]
wat = ["wasmer/wat"]
compiler = ["wasmer/compiler", "backend", "wasmer-compiler/translator"]
singlepass = ["compiler", "wasmer-compiler-singlepass", "wasmer/singlepass"]
cranelift = ["compiler", "wasmer-compiler-cranelift", "wasmer/cranelift"]
llvm = ["compiler", "wasmer-compiler-llvm", "wasmer/llvm"]
middlewares = ["wasmer-middlewares"]
wasmer-artifact-load = ["wasmer-compiler/wasmer-artifact-load"]
wasmer-artifact-create = ["wasmer-compiler/wasmer-artifact-create"]
static-artifact-load = ["wasmer-compiler/static-artifact-load"]
static-artifact-create = ["wasmer-compiler/static-artifact-create"]

# Testing features
test-singlepass = ["singlepass"]
test-cranelift = ["cranelift"]
test-llvm = ["llvm"]

test-universal = ["test-generator/test-universal"]

# Specifies that we're running in coverage testing mode. This disables tests
# that raise signals because that interferes with tarpaulin.
coverage = []

#[profile.release]
#debug = true

# Enable optimizations for a few crates, even for debug builds.
# This greatly speeds up using debug builds, because these crates are extremely
# slow without optimizations.
[profile.dev.package.cranelift-codegen]
opt-level = 3
[profile.dev.package.regalloc2]
opt-level = 3
[profile.dev.package.wasmparser]
opt-level = 3
[profile.dev.package.rkyv]
opt-level = 3
[profile.dev.package.wasmer-types]
opt-level = 3
[profile.dev.package.weezl]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.xxhash-rust]
opt-level = 3
[profile.dev.package.digest]
opt-level = 3

[[bench]]
name = "run"
harness = false

[[bench]]
name = "compile"
harness = false

[[bench]]
name = "deserialize_modules"
harness = false

[[bench]]
name = "static_and_dynamic_functions"
harness = false

[[bench]]
name = "import_functions"
harness = false

[[example]]
name = "early-exit"
path = "examples/early_exit.rs"
required-features = ["backend"]

[[example]]
name = "engine"
path = "examples/engine.rs"
required-features = ["cranelift"]

[[example]]
name = "engine-headless"
path = "examples/engine_headless.rs"
required-features = ["cranelift"]

[[example]]
name = "platform-headless-ios"
path = "examples/platform_ios_headless.rs"
required-features = ["cranelift"]

[[example]]
name = "cross-compilation"
path = "examples/engine_cross_compilation.rs"
required-features = ["cranelift"]

[[example]]
name = "compiler-singlepass"
path = "examples/compiler_singlepass.rs"
required-features = ["singlepass"]

[[example]]
name = "compiler-cranelift"
path = "examples/compiler_cranelift.rs"
required-features = ["cranelift"]

[[example]]
name = "compiler-llvm"
path = "examples/compiler_llvm.rs"
required-features = ["llvm"]

[[example]]
name = "exported-function"
path = "examples/exports_function.rs"
required-features = ["backend"]

[[example]]
name = "exported-global"
path = "examples/exports_global.rs"
required-features = ["backend"]

[[example]]
name = "exported-memory"
path = "examples/exports_memory.rs"
required-features = ["backend"]

[[example]]
name = "funcref"
path = "examples/funcref.rs"
required-features = ["backend"]

[[example]]
name = "imported-function"
path = "examples/imports_function.rs"
required-features = ["backend"]

[[example]]
name = "imported-global"
path = "examples/imports_global.rs"
required-features = ["backend"]

[[example]]
name = "tunables-limit-memory"
path = "examples/tunables_limit_memory.rs"
required-features = ["cranelift"]

[[example]]
name = "wasi"
path = "examples/wasi.rs"
required-features = ["wasi"]

[[example]]
name = "wasi-manual-setup"
path = "examples/wasi_manual_setup.rs"
required-features = ["tokio", "backend", "wasi"]

[[example]]
name = "wasi-pipes"
path = "examples/wasi_pipes.rs"
required-features = ["tokio", "backend", "wasi"]

[[example]]
name = "table"
path = "examples/table.rs"
required-features = ["backend"]

[[example]]
name = "memory"
path = "examples/memory.rs"
required-features = ["backend"]

[[example]]
name = "memory-grow"
path = "examples/memory_grow.rs"
required-features = ["backend"]

[[example]]
name = "instance"
path = "examples/instance.rs"
required-features = ["backend"]

[[example]]
name = "errors"
path = "examples/errors.rs"
required-features = ["backend"]

[[example]]
name = "imported-function-env"
path = "examples/imports_function_env.rs"
required-features = ["backend"]

[[example]]
name = "imported-function-env-global"
path = "examples/imports_function_env_global.rs"
required-features = ["backend"]

[[example]]
name = "hello-world"
path = "examples/hello_world.rs"
required-features = ["backend"]

[[example]]
name = "metering"
path = "examples/metering.rs"
required-features = ["cranelift"]

[[example]]
name = "imports-exports"
path = "examples/imports_exports.rs"
required-features = ["backend"]

[[example]]
name = "features"
path = "examples/features.rs"
required-features = ["cranelift"]

[[example]]
name = "http-dynamic-size"
path = "examples/http_dynamic_size.rs"
required-features = ["cranelift"]

[[example]]
name = "throw-exception"
path = "examples/throw_exception.rs"
required-features = ["llvm"]
