[package]
name = "wasmer"
version = "0.15.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2018"
repository = "https://github.com/TerraDharitri/wasmer"
publish = true
description = "High-Performance WebAssembly JIT interpreter"
license = "MIT"
default-run = "wasmer"
include = [
    "examples/**/*",
    "src/**/*",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "Makefile",
    "/README.md",
    "rustfmt.toml"
]

[dependencies]
atty = "0.2"
byteorder = "1.3"
errno = "0.2"
fern = { version = "0.5", features = ["colored"], optional = true }
log = "0.4"
structopt = "0.3"
wabt = { version = "0.9.1", optional = true }
wasmer-clif-backend = { path = "lib/clif-backend", optional = true }
wasmer-singlepass-backend = { path = "lib/singlepass-backend", optional = true }
wasmer-middleware-common = { path = "lib/middleware-common" }
wasmer-runtime = { path = "lib/runtime" }
wasmer-runtime-core = { path = "lib/runtime-core" }
wasmer-emscripten = { path = "lib/emscripten" }
wasmer-llvm-backend = { path = "lib/llvm-backend", optional = true }
wasmer-wasi = { path = "lib/wasi", optional = true }
wasmer-kernel-loader = { path = "lib/kernel-loader", optional = true }
wasmer-dev-utils = { path = "lib/dev-utils", optional = true }
wasmer-wasi-tests = { path = "lib/wasi-tests", optional = true }
wasmer-middleware-common-tests = { path = "lib/middleware-common-tests", optional = true }
wasmer-emscripten-tests = { path = "lib/emscripten-tests", optional = true }
wasmer-wasi-experimental-io-devices = { path = "lib/wasi-experimental-io-devices", optional = true }

[workspace]
members = [
    # "lib/clif-backend",
    "lib/singlepass-backend",
    "lib/runtime",
    "lib/runtime-core",
    "lib/runtime-core-tests",
    "lib/emscripten",
    "lib/spectests",
    "lib/win-exception-handler",
    "lib/runtime-c-api",
    "lib/llvm-backend",
    "lib/llvm-backend-tests",
    "lib/wasi",
    "lib/middleware-common",
    "lib/kernel-loader",
    "lib/kernel-net",
    "lib/dev-utils",
    "lib/wasi-experimental-io-devices",
    "lib/wasi-tests",
    "lib/emscripten-tests",
    "lib/middleware-common-tests",
    "lib/interface-types",
    "examples/parallel",
    "examples/plugin-for-example",
    "examples/parallel-guest",
]

[build-dependencies]
wabt = "0.9.1"
glob = "0.3"
rustc_version = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] } # used by the plugin example
typetag = "0.1" # used by the plugin example

[features]
default = ["fast-tests", "wasi", "backend-singlepass", "wabt"]
"loader-kernel" = ["wasmer-kernel-loader"]
debug = ["fern", "log/max_level_debug", "log/release_max_level_debug"]
trace = ["fern", "log/max_level_trace", "log/release_max_level_trace"]
docs = ["wasmer-runtime/docs"]
# This feature will allow cargo test to run much faster
fast-tests = []
backend-cranelift = [
    "wasmer-clif-backend",
    "wasmer-clif-backend/generate-debug-information",
    "wasmer-runtime-core/generate-debug-information",
    "wasmer-runtime/cranelift",
    "wasmer-middleware-common-tests/clif",
]
backend-llvm = [
    "wasmer-llvm-backend",
    "wasmer-runtime/llvm",
    "wasmer-middleware-common-tests/llvm",
    "wasmer-runtime-core/generate-debug-information-no-export-symbols"
]
backend-singlepass = [
    "wasmer-singlepass-backend",
    "wasmer-singlepass-backend/deterministic-execution",
    "wasmer-runtime-core/backend-singlepass",
    "wasmer-runtime/singlepass",
    "wasmer-middleware-common-tests/singlepass",
]
wasi = ["wasmer-wasi"]
experimental-io-devices = ["wasmer-wasi-experimental-io-devices"]
managed = ["backend-singlepass", "wasmer-runtime-core/managed"]

[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
debug = true       # (u32 or bool) Include debug information (debug symbols).
                   # Equivalent to `-C debuginfo=2` compiler flag.
rpath = false      # controls whether compiler should set loader paths.
                   # If true, passes `-C rpath` flag to the compiler.
lto = false        # Link Time Optimization usually reduces size of binaries
                   # and static libraries. Increases compilation time.
                   # If true, passes `-C lto` flag to the compiler, and if a
                   # string is specified like 'thin' then `-C lto=thin` will
                   # be passed.
debug-assertions = true # controls whether debug assertions are enabled
                   # (e.g., debug_assert!() and arithmetic overflow checks)
codegen-units = 16 # if > 1 enables parallel code generation which improves
                   # compile times, but prevents some optimizations.
                   # Passes `-C codegen-units`.
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
incremental = true # whether or not incremental compilation is enabled
                   # This can be overridden globally with the CARGO_INCREMENTAL
                   # environment variable or `build.incremental` config
                   # variable. Incremental is only used for path sources.
overflow-checks = true # use overflow checks for integer arithmetic.
                   # Passes the `-C overflow-checks=...` flag to the compiler.
